030-software/fluxcd/apps/headlamp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    bundle.cert-manager.io/inject-cm: enabled
