030-software/fluxcd/apps/headlamp/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: headlamp
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: headlamp
