030-software/fluxcd/apps/headlamp/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    dashboard.${domain}/name: headlamp
    dashboard.${domain}/url: https://headlamp.${domain}/c/main/pods?namespace=vpn-egress-gateway
spec:
  hostnames:
  - headlamp.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
